Ticket #3472 (closed defect: fixed)

Opened 7 years ago

Last modified 4 months ago

animated cursor command not working

Reported by: stefabc Owned by:
Priority: normal Milestone:
Component: wxMSW Version: 2.9-svn
Keywords: Cc: stefabc
Blocked By: Patch: yes
Blocking:

Description

I receive the following error when I tried:
cursor = wx.Cursor

('C:/VSS_PDD_Identify/hourgla3.ani',

wx.BITMAP_TYPE_ANI)

Traceback (most recent call last):
File "C:\Python24\lib\site-

packages\PythonCard\widget.py", line 408,

in _dispatch
handler(background, aWxEvent)
File "C:\VSS_PDD_Identify\Identify.py", line 732,

in

on_Identify_mouseClick
cursor = wx.Cursor

('C:/VSS_PDD_Identify/hourgla3.ani',

wx.BITMAP_TYPE_ANI)
File "C:\Python24\lib\site-packages\wx-2.6-msw-

unicode\wx\_gdi.py",

line 1057,
in init
newobj = _gdi_.new_Cursor(*args, **kwargs)
wx._core.PyAssertionError: C++

assertion "wxAssertFailure" failed in

..\..\src\msw\cursor.cpp(287): unknown cursor

resource type


Attachments

test3472_minimal.patch download (6.9 KB) - added by catalin 4 months ago.
fix3472.patch download (1.4 KB) - added by catalin 4 months ago.

Change History

Changed 4 months ago by catalin

Changed 4 months ago by catalin

Changed 4 months ago by catalin

  • version set to 2.9-svn
  • patch set

Looks like this was not supported. With the small attached change .ani cursors can be loaded too.

Changed 4 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [73480]) Allow creating wxCursor from ANI files under MSW.

Simply pass them to the standard LoadCursorFromFile() function which supports
this format.

Closes #3472.

Note: See TracTickets for help on using tickets.